# geodatafusion

./: CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md
.github/: dependabot.yml
.github/workflows/: check-udf-registration.yml  ci.yml  python-wheels.yml  python.yml  rust-release.yml
python/: CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md  pyproject.toml
python/geodatafusion/: Cargo.toml
python/geodatafusion/src/: utils.rs
python/python/geodatafusion/: __init__.py
python/python/geodatafusion/geo/: _validation.pyi
python/python/geodatafusion/native/: _accessors.pyi
python/src/: constants.rs  lib.rs  utils.rs
python/src/table_provider/: mod.rs
python/src/udf/geo/: mod.rs  relationships.rs  validation.rs
python/src/udf/native/: accessors.rs  bounding_box.rs  mod.rs
python/tests/: test_register.py
python/tests/udf/geo/: test_validation.py
python/tests/udf/native/: test_constructors.py
rust/geodatafusion/: Cargo.toml
rust/geodatafusion-flatgeobuf/: Cargo.toml
rust/geodatafusion-flatgeobuf/src/: file_format.rs  lib.rs  source.rs
rust/geodatafusion-geojson/: Cargo.toml
rust/geodatafusion-geojson/src/: file_format.rs  lib.rs
rust/geodatafusion-geoparquet/: Cargo.toml
rust/geodatafusion-geoparquet/src/: file_format.rs  lib.rs  source.rs
rust/geodatafusion/src/: data_types.rs  error.rs  lib.rs
rust/geodatafusion/src/udf/: mod.rs
rust/geodatafusion/src/udf/geo/: aggregate.rs  mod.rs
rust/geodatafusion/src/udf/geo/measurement/: advanced.rs  area.rs  distance.rs  length.rs  mod.rs
rust/geodatafusion/src/udf/geo/processing/: advanced.rs  affine.rs  buffer.rs  centroid.rs  convex_hull.rs  editors.rs  linear_ref.rs  make_valid.rs  mod.rs  oriented_envelope.rs  overlay.rs  point_on_surface.rs  simplify.rs  transform.rs
rust/geodatafusion/src/udf/geo/relationships/: dwithin.rs  mod.rs  relate.rs
rust/geodatafusion/src/udf/geo/relationships/topological/: intersects.rs  mod.rs  relate.rs
rust/geodatafusion/src/udf/geo/validation/: is_valid.rs  is_valid_reason.rs  mod.rs
rust/geodatafusion/src/udf/geohash/: box2d_from_geohash.rs  geohash.rs  mod.rs  point_from_geohash.rs
rust/geodatafusion/src/udf/geos/: mod.rs
rust/geodatafusion/src/udf/geos/processing/: line_merge.rs  mod.rs
rust/geodatafusion/src/udf/native/accessors/: coord_dim.rs  dump.rs  geometry_accessors.rs  geometry_type.rs  is_closed.rs  is_empty.rs  line_string.rs  mod.rs  npoints.rs  num_interior_rings.rs  point.rs
rust/geodatafusion/src/udf/native/bounding_box/: box.rs  extent.rs  extrema.rs  make_box.rs  mod.rs
rust/geodatafusion/src/udf/native/bounding_box/util/: bounds.rs
rust/geodatafusion/src/udf/native/constructors/: make.rs  mod.rs  point.rs
rust/geodatafusion/src/udf/native/editors/: flip_coordinates.rs  mod.rs
rust/geodatafusion/src/udf/native/io/: ewkt.rs  geojson.rs  mod.rs  wkb.rs  wkt.rs
rust/geodatafusion/src/udf/util/: mod.rs  to_wkt_geometry.rs
scripts/: check_udf_registration.py
