[workspace]
members = [
    "rust/geodatafusion-flatgeobuf",
    "rust/geodatafusion-geojson",
    "rust/geodatafusion-geoparquet",
    "rust/geodatafusion",
]
exclude = ["python"]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.2"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datafusion-contrib/datafusion-geo"
rust-version = "1.85"
categories = ["science::geo"]

[workspace.dependencies]
approx = "0.5.1"
arrow-arith = "56.2"
arrow-array = "56.2"
arrow-schema = "56.2"
async-trait = "0.1"
datafusion = "50.2"
datafusion-datasource = "50.2"
datafusion-datasource-parquet = "50.2"
flatgeobuf = { version = "5.0", default-features = false }
futures = "0.3"
geo = "0.31.0"
geo-traits = "0.3.0"
geoarrow-array = "0.6.0-beta.2"
geoarrow-flatgeobuf = "0.6.0-beta.2"
geoarrow-expr-geo = "0.6.0-beta.2"
geoarrow-geojson = "0.6.0-beta.2"
geoarrow-schema = "0.6.0-beta.2"
geodatafusion = { path = "rust/geodatafusion", version = "0.1.0-beta.2" }
geohash = "0.13.1"
geojson = "0.24"
geoparquet = "0.6.0-beta.2"
http-range-client = { version = "0.9", default-features = false }
object_store = "0.12.4"
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.9", default-features = false }
wkb = "0.9"
wkt = "0.14"
