[workspace]
members = [
    "rust/geodatafusion-flatgeobuf",
    "rust/geodatafusion-geojson",
    "rust/geodatafusion-geoparquet",
    "rust/geodatafusion",
]
exclude = ["python"]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datafusion-contrib/geodatafusion"
rust-version = "1.88"
categories = ["science::geo"]

[workspace.dependencies]
approx = "0.5.1"
arrow-arith = "57.1"
arrow-array = "57.1"
arrow-schema = "57.1"
async-trait = "0.1"
datafusion = { version = "51", default-features = false }
datafusion-datasource = { version = "51", default-features = false }
datafusion-datasource-parquet = "51"
flatgeobuf = { version = "5.0", default-features = false }
futures = "0.3"
geo = "0.31.0"
geo-traits = "0.3.0"
geoarrow-array = "0.6.2"
geoarrow-flatgeobuf = "0.6.2"
geoarrow-expr-geo = "0.6.2"
geoarrow-geojson = "0.6.2"
geoarrow-schema = "0.6.2"
geodatafusion = { path = "rust/geodatafusion", version = "0.1.1" }
geohash = "0.13.1"
geojson = "0.24"
geoparquet = "0.6.2"
http-range-client = { version = "0.9", default-features = false }
object_store = "0.12.4"
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.9", default-features = false }
wkb = "0.9"
wkt = "0.14"

[patch.crates-io]
geoarrow-array = { git = "https://github.com/geoarrow/geoarrow-rs.git" }
geoarrow-flatgeobuf = { git = "https://github.com/geoarrow/geoarrow-rs.git" }
geoarrow-expr-geo = { git = "https://github.com/geoarrow/geoarrow-rs.git" }
geoarrow-geojson = { git = "https://github.com/geoarrow/geoarrow-rs.git" }
geoarrow-schema = { git = "https://github.com/geoarrow/geoarrow-rs.git" }
geoparquet = { git = "https://github.com/geoarrow/geoarrow-rs.git" }
