[package]
name = "geodatafusion-python"
version = "0.4.0"
edition = "2024"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
description = "Python bindings for geodatafusion, a geospatial extension to DataFusion"
readme = "README.md"
repository = "https://github.com/datafusion-contrib/geodatafusion"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow", "geospatial"]
categories = ["wasm", "science::geo"]
rust-version = "1.88"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[features]

[dependencies]
datafusion = { version = "53", default-features = false }
datafusion-ffi = "53"
geoarrow-schema = "0.8.0"
geodatafusion = { path = "../rust/geodatafusion" }
pyo3 = { version = "0.26", features = [
    "hashbrown",
    "serde",
    "anyhow",
    "abi3-py39",
] }
