[package]
name = "geodatafusion"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Spatial extensions for Apache DataFusion"
categories = { workspace = true }
rust-version = { workspace = true }


[dependencies]
arrow-arith = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
datafusion = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-expr-geo = { workspace = true }
geoarrow-schema = { workspace = true }
geohash = { workspace = true }
thiserror = { workspace = true }
wkt = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
geo-traits = { workspace = true }
geoarrow-array = { workspace = true, features = ["test-data"] }
object_store = { workspace = true, features = ["http"] }
tokio = { workspace = true, features = ["macros", "fs", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
