[package]
name = "geodatafusion"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Spatial extensions for Apache DataFusion"
categories = { workspace = true }
rust-version = { workspace = true }


[features]
# Enable GEOS-backed UDFs (e.g. ST_LineMerge).
# Requires GEOS >= 3.11 for directed merge (the feature flag here opts in to v3.11 features).
geos = ["dep:geos", "geos/v3_11_0"]
# Build a bundled GEOS from vendored source instead of linking the system library.
geos-static = ["geos", "geos/static"]

[dependencies]
arrow-arith = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
datafusion = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-expr-geo = { workspace = true }
geoarrow-schema = { workspace = true }
geohash = { workspace = true }
geos = { workspace = true, optional = true }
thiserror = { workspace = true }
wkt = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
datafusion = { workspace = true, features = ["sql"] }
geo-traits = { workspace = true }
geoarrow-array = { workspace = true, features = ["test-data"] }
object_store = { workspace = true, features = ["http"] }
tokio = { workspace = true, features = ["macros", "fs", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
